# agent-financial-analyst

./: README.md
agent-financial-analyst/: CONTRIBUTING.md  Dockerfile  PROJECT_STATUS.md  README.md  pyproject.toml
agent-financial-analyst/frontend/: index.html  package.json  vite.config.ts
agent-financial-analyst/frontend/src/: App.tsx  index.css
agent-financial-analyst/src/agent_financial_analyst/: __init__.py  cli.py  models.py
agent-financial-analyst/src/agent_financial_analyst/agents/: __init__.py  document_analyst.py  fundamental.py  market_data.py  reviewer.py  risk.py  synthesis.py  technical.py
agent-financial-analyst/src/agent_financial_analyst/api/: main.py
agent-financial-analyst/src/agent_financial_analyst/core/: base.py  orchestrator.py
agent-financial-analyst/src/agent_financial_analyst/schema/: models.py
agent-financial-analyst/src/agent_financial_analyst/tools/: __init__.py  sec_retrieval.py
agent-financial-analyst/src/agent_financial_analyst/utils/: logging.py
agent-financial-analyst/tests/: test_core.py
