[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-financial-analyst"
version = "0.2.0"
description = "AgentFinancialPro: Institutional-grade 6-agent equity research platform with automated critique & SEC intelligence"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Daniel López Orta", email = "daniellopezorta39@gmail.com" }]
keywords = [
    "agent", "financial-analysis", "equity-research", "multi-agent",
    "stock", "llm", "yfinance", "investment-research",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "yfinance>=0.2.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.6.0",
    "loguru>=0.7.2",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
    "backoff>=2.2.1",
    "openai>=1.14.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
all = ["openai>=1.0", "plotly>=5.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
agent-analyst = "agent_financial_analyst.cli:main"

[project.urls]
Homepage = "https://github.com/daniellopez882/agent-financial-analyst"
Repository = "https://github.com/daniellopez882/agent-financial-analyst"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
